--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,20 @@ address {
   font-style: normal;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .container {
   max-width: 1166px;
   padding-right: 15px;
@@ -47,9 +61,11 @@ address {
   padding-top: 24px;
   padding-bottom: 32px;
 }
+
 .container.is-flex {
   display: flex;
 }
+
 .header__nav {
   width: 100%;
   display: flex;
@@ -57,6 +73,7 @@ address {
   justify-content: space-between;
   margin-right: 90px;
 }
+
 .main-logo {
   display: flex;
   align-items: center;
@@ -67,25 +84,137 @@ address {
   letter-spacing: -0.03em;
   margin-right: auto;
 }
+
 .main-logo span {
   font-style: italic;
 }
+
 .menu__list {
   display: flex;
   gap: 24px;
 }
+
 .menu__link {
   font-size: 14px;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: -0.02em;
 }
+
 .social-menu__list {
   display: flex;
   gap: 14px;
 }
+
 /* ! Wait, untile lesson */
 /* .social-menu__link:hover svg,
 .social-menu__link:active svg {
   fill: #fd9222;
 } */
+
+/*** Section - Hero ***/
+
+.section-hero {
+  padding-bottom: 80px;
+}
+
+.hero__wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: start;
+  padding: 40px;
+  border-radius: 30px;
+  background-color: rgba(17, 17, 17, 0.6);
+  min-height: 600px;
+}
+
+.main-heading {
+  max-width: 484px;
+  color: #fff;
+  font-size: 28px;
+  font-weight: 500;
+  line-height: 1.2; /* 121.429% */
+  letter-spacing: -0.05em;
+  padding-bottom: 32px;
+}
+
+.hero__buttons-wrap {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.hero__cta-wrap {
+  display: flex;
+  gap: 14px;
+  align-items: center;
+}
+
+.button {
+  display: flex;
+  padding: 14px 40px;
+  align-items: flex-start;
+  gap: 14px;
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 600;
+  background-color: #fd9222;
+  border: 1px solid transparent;
+  border-radius: 100vh;
+}
+
+.is-secondary {
+  border: 1px solid #fff;
+  background-color: transparent;
+}
+
+.button-scroll {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.3;
+  letter-spacing: -0.03em;
+}
+
+.button-scroll__icon {
+  width: 38px;
+  height: 38px;
+  padding: 8px;
+  flex-shrink: 0;
+  background-color: #fff;
+  border-radius: 100%;
+}
+
+/*** Section - Features ***/
+
+.section-features {
+  background-color: #1e1823;
+  color: #fff;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.features__list {
+  display: flex;
+  justify-content: space-between;
+}
+.features__list-item {
+  max-width: 308px;
+}
+.card-heading {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 18px;
+}
+.features__text {
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 14px;
+  line-height: 1.3; /* 128.571% */
+  letter-spacing: -0.02em;
+}
