--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 body {
   font-size: 14px;
   font-family: "Montserrat", sans-serif;
@@ -41,7 +44,6 @@ address {
   margin: -1px;
   border: 0;
   padding: 0;
-
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
@@ -206,7 +208,7 @@ address {
 .features__list-item {
   max-width: 308px;
 }
-.card-heading {
+.features__heading {
   color: #fff;
   font-size: 18px;
   font-weight: 600;
@@ -217,4 +219,228 @@ address {
   font-size: 14px;
   line-height: 1.3; /* 128.571% */
   letter-spacing: -0.02em;
+}
+
+/*** Section - Taste ***/
+.section-taste {
+  padding-top: 120px;
+}
+.section-heading {
+  max-width: 412px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.2;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+  margin-bottom: 50px;
+}
+.section-heading span {
+  color: #fd9222;
+}
+.section-heading-subtext {
+  max-width: 486px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.3;
+  letter-spacing: -0.02em;
+  margin-bottom: 50px;
+}
+.taste__list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 32px;
+  row-gap: 24px;
+}
+.taste__list-item {
+  width: calc((100% - 32 * 3) / 4);
+  padding: 28px 21px;
+  border-radius: 15px;
+  border: 1px solid #fd9222;
+  background: #fff;
+}
+.taste__list-item:nth-child(1),
+.taste__list-item:nth-child(5) {
+  background-color: #fd9222;
+  color: #fff;
+}
+.taste__list-item:nth-child(3),
+.taste__list-item:nth-child(7) {
+  background-color: #1e1823;
+  color: #fff;
+  border-color: #1e1823;
+}
+.taste__list-item img {
+  margin-bottom: 36px;
+}
+.taste__list-item-heading {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.3;
+  letter-spacing: -0.02em;
+}
+
+/*** Section - Taste ***/
+.section-how-its-made {
+  padding-top: 120px;
+}
+.section-heading.is-taste {
+  margin-bottom: 28px;
+}
+.how-its-made__list {
+  display: flex;
+  gap: 20px;
+}
+.how-its-made__list-item {
+  width: calc(100% - 20px / 2);
+}
+.item-heading {
+}
+.how-its-made__list-item:nth-child(2) {
+  padding: 32px;
+}
+.how-its-made__image {
+  border-radius: 15px;
+}
+.how-its-made__content-heading {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 1.2;
+  margin-bottom: 28px;
+}
+.how-its-made__content-list-item {
+  padding-left: 16px;
+  position: relative;
+}
+.how-its-made__content-list-item:not(:last-child) {
+  margin-bottom: 24px;
+}
+.how-its-made__content-list-item::before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 0;
+  border-radius: 100%;
+  width: 7px;
+  height: 7px;
+  background-color: #4c4c4c;
+  border: 1px solid #eceded;
+}
+.how-its-made__content-text {
+  font-size: 14px;
+  line-height: 1.3;
+  letter-spacing: -0.02em;
+}
+
+/*** Section - Products ***/
+.section-products {
+  padding-top: 120px;
+}
+.products__list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 18px;
+  row-gap: 24px;
+}
+.products__lits-item {
+  width: calc((100% - 18 * 3) / 4);
+  border-radius: 15px;
+  border: 1px solid rgba(17, 17, 17, 0.1);
+  background: #fff;
+  padding: 32px 18px;
+  text-align: center;
+}
+.item-heading {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 1.3;
+  letter-spacing: -0.02em;
+  text-transform: uppercase;
+}
+.item-heading.is-products {
+  margin-top: 8px;
+  margin-bottom: 2px;
+}
+.products__small-text {
+  color: rgba(17, 17, 17, 0.7);
+  font-size: 12px;
+  line-height: 1.2;
+  letter-spacing: -0.02em;
+  margin-bottom: 18px;
+}
+.products__price-badge {
+  display: inline-block;
+  border-radius: 100px;
+  border: 1px solid rgba(17, 17, 17, 0.1);
+  background: #fafafa;
+  padding: 8px 20px;
+}
+
+/*** Section - Sellers ***/
+.section-sellers {
+  padding-top: 120px;
+}
+.sellers__list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+.sellers__list-item {
+  width: calc((100% - 32px) / 3);
+  border-radius: 0 0 15px 15px;
+  border-radius: 0px 0px 15px 15px;
+  background-color: #fff;
+  text-align: center;
+}
+.sellers__img {
+}
+
+/*** Section - Testimonials ***/
+.section-testimonials {
+  padding-top: 120px;
+}
+.testimonials__list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 28px;
+  margin-bottom: 50px;
+}
+.section-heading.is-testimonials {
+  margin-bottom: 92px;
+}
+.testimonials__list-item {
+  width: calc((100% - 56px) / 3);
+  border-radius: 15px;
+  border: 1px solid rgba(17, 17, 17, 0.1);
+  background-color: #fff;
+  box-shadow: 0px 9.049px 100px 0px rgba(17, 17, 17, 0.03);
+  text-align: center;
+  padding: 0 24px 24px 24px;
+}
+.testimonials__avatar {
+  border-radius: 100%;
+  margin-bottom: 18px;
+  /* transform: translateY(-42px); */
+  margin-top: -42px;
+}
+.testimonials__name {
+  color: #111;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 1.3;
+  margin-bottom: 24px;
+}
+.testimonials__text {
+  color: rgba(17, 17, 17, 0.7);
+
+  font-size: 14px;
+  line-height: 1.3;
+  letter-spacing: -0.02em;
+}
+.button.is-testimonials {
+  color: #111;
+  border: 1px solid #fd9222;
+  margin: 0 auto;
 }
