--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,13 @@
 html {
   scroll-behavior: smooth;
 }
+
 body {
   font-size: 14px;
   font-family: "Montserrat", sans-serif;
   color: #111;
 }
+
 p,
 h1,
 h2,
@@ -30,7 +32,19 @@ ul {
 }
 
 button {
+  font-family: inherit;
+  border: none;
   cursor: pointer;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+input:focus {
+  outline: transparent;
+  border: 1px solid #fd9222;
 }
 
 address {
@@ -101,18 +115,28 @@ address {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: -0.02em;
+  transition: color 150ms ease-in-out;
+}
+.menu__link:hover,
+.menu__link:focus {
+  color: #fd9222;
+}
+
+.social-menu__icon {
+  stroke: #111111;
+  fill: transparent;
+  transition: stroke 150ms ease-in-out;
+}
+
+.social-menu__link:hover .social-menu__icon,
+.social-menu__link:focus .social-menu__icon {
+  stroke: #fd9222;
 }
 
 .social-menu__list {
   display: flex;
   gap: 14px;
 }
-
-/* ! Wait, untile lesson */
-/* .social-menu__link:hover svg,
-.social-menu__link:active svg {
-  fill: #fd9222;
-} */
 
 /*** Section - Hero ***/
 
@@ -155,22 +179,29 @@ address {
 }
 
 .button {
-  display: flex;
-  padding: 14px 40px;
-  align-items: flex-start;
-  gap: 14px;
   color: #fff;
-  font-family: Montserrat;
   font-size: 14px;
   font-weight: 600;
+  border-radius: 100px;
+  line-height: 18px;
   background-color: #fd9222;
-  border: 1px solid transparent;
-  border-radius: 100vh;
+  padding: 17px 40px;
+  transition: background 150ms ease-in-out, color 150ms ease-in-out;
+}
+.button:hover,
+.button:focus {
+  color: #fd9222;
+  background-color: #fcf1e0;
 }
 
-.is-secondary {
+.button.is-secondary {
   border: 1px solid #fff;
   background-color: transparent;
+  transition: border 150ms ease-in-out;
+}
+.button.is-secondary:hover,
+.button.is-secondary:focus {
+  border-color: #fd9222;
 }
 
 .button-scroll {
@@ -201,19 +232,23 @@ address {
   padding-top: 50px;
   padding-bottom: 50px;
 }
+
 .features__list {
   display: flex;
   justify-content: space-between;
 }
+
 .features__list-item {
   max-width: 308px;
 }
+
 .features__heading {
   color: #fff;
   font-size: 18px;
   font-weight: 600;
   margin-bottom: 18px;
 }
+
 .features__text {
   color: rgba(255, 255, 255, 0.7);
   font-size: 14px;
@@ -222,9 +257,11 @@ address {
 }
 
 /*** Section - Taste ***/
+
 .section-taste {
   padding-top: 120px;
 }
+
 .section-heading {
   max-width: 412px;
   margin: 0 auto;
@@ -236,9 +273,11 @@ address {
   text-transform: uppercase;
   margin-bottom: 50px;
 }
+
 .section-heading span {
   color: #fd9222;
 }
+
 .section-heading-subtext {
   max-width: 486px;
   margin: 0 auto;
@@ -248,12 +287,14 @@ address {
   letter-spacing: -0.02em;
   margin-bottom: 50px;
 }
+
 .taste__list {
   display: flex;
   flex-wrap: wrap;
   column-gap: 32px;
   row-gap: 24px;
 }
+
 .taste__list-item {
   width: calc((100% - 32 * 3) / 4);
   padding: 28px 21px;
@@ -261,20 +302,24 @@ address {
   border: 1px solid #fd9222;
   background: #fff;
 }
+
 .taste__list-item:nth-child(1),
 .taste__list-item:nth-child(5) {
   background-color: #fd9222;
   color: #fff;
 }
+
 .taste__list-item:nth-child(3),
 .taste__list-item:nth-child(7) {
   background-color: #1e1823;
   color: #fff;
   border-color: #1e1823;
 }
+
 .taste__list-item img {
   margin-bottom: 36px;
 }
+
 .taste__list-item-heading {
   font-size: 14px;
   font-weight: 600;
@@ -283,40 +328,48 @@ address {
 }
 
 /*** Section - Taste ***/
+
 .section-how-its-made {
   padding-top: 120px;
 }
+
 .section-heading.is-taste {
   margin-bottom: 28px;
 }
+
 .how-its-made__list {
   display: flex;
   gap: 20px;
 }
+
 .how-its-made__list-item {
   width: calc(100% - 20px / 2);
 }
-.item-heading {
-}
+
 .how-its-made__list-item:nth-child(2) {
   padding: 32px;
 }
+
 .how-its-made__image {
   border-radius: 15px;
 }
+
 .how-its-made__content-heading {
   font-size: 18px;
   font-weight: 600;
   line-height: 1.2;
   margin-bottom: 28px;
 }
+
 .how-its-made__content-list-item {
   padding-left: 16px;
   position: relative;
 }
+
 .how-its-made__content-list-item:not(:last-child) {
   margin-bottom: 24px;
 }
+
 .how-its-made__content-list-item::before {
   content: "";
   position: absolute;
@@ -328,6 +381,7 @@ address {
   background-color: #4c4c4c;
   border: 1px solid #eceded;
 }
+
 .how-its-made__content-text {
   font-size: 14px;
   line-height: 1.3;
@@ -335,15 +389,18 @@ address {
 }
 
 /*** Section - Products ***/
+
 .section-products {
   padding-top: 120px;
 }
+
 .products__list {
   display: flex;
   flex-wrap: wrap;
   column-gap: 18px;
   row-gap: 24px;
 }
+
 .products__lits-item {
   width: calc((100% - 18 * 3) / 4);
   border-radius: 15px;
@@ -352,6 +409,7 @@ address {
   padding: 32px 18px;
   text-align: center;
 }
+
 .item-heading {
   font-size: 18px;
   font-weight: 600;
@@ -359,10 +417,12 @@ address {
   letter-spacing: -0.02em;
   text-transform: uppercase;
 }
+
 .item-heading.is-products {
   margin-top: 8px;
   margin-bottom: 2px;
 }
+
 .products__small-text {
   color: rgba(17, 17, 17, 0.7);
   font-size: 12px;
@@ -370,6 +430,7 @@ address {
   letter-spacing: -0.02em;
   margin-bottom: 18px;
 }
+
 .products__price-badge {
   display: inline-block;
   border-radius: 100px;
@@ -379,14 +440,17 @@ address {
 }
 
 /*** Section - Sellers ***/
+
 .section-sellers {
   padding-top: 120px;
 }
+
 .sellers__list {
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
 }
+
 .sellers__list-item {
   width: calc((100% - 32px) / 3);
   border-radius: 0 0 15px 15px;
@@ -394,22 +458,33 @@ address {
   background-color: #fff;
   text-align: center;
 }
-.sellers__img {
+
+.sellers-item__bottom {
+  padding: 28px 0;
+  border-radius: 0px 0px 15px 15px;
+  border-right: 1px solid rgba(17, 17, 17, 0.1);
+  border-bottom: 1px solid rgba(17, 17, 17, 0.1);
+  border-left: 1px solid rgba(17, 17, 17, 0.1);
+  background-color: #ffffff;
 }
 
 /*** Section - Testimonials ***/
+
 .section-testimonials {
-  padding-top: 120px;
+  padding: 120px 0;
 }
+
 .testimonials__list {
   display: flex;
   flex-wrap: wrap;
   gap: 28px;
   margin-bottom: 50px;
 }
+
 .section-heading.is-testimonials {
   margin-bottom: 92px;
 }
+
 .testimonials__list-item {
   width: calc((100% - 56px) / 3);
   border-radius: 15px;
@@ -419,12 +494,13 @@ address {
   text-align: center;
   padding: 0 24px 24px 24px;
 }
+
 .testimonials__avatar {
   border-radius: 100%;
   margin-bottom: 18px;
-  /* transform: translateY(-42px); */
-  margin-top: -42px;
+  margin: -42px auto 16px;
 }
+
 .testimonials__name {
   color: #111;
   font-size: 18px;
@@ -432,15 +508,129 @@ address {
   line-height: 1.3;
   margin-bottom: 24px;
 }
+
 .testimonials__text {
   color: rgba(17, 17, 17, 0.7);
-
   font-size: 14px;
   line-height: 1.3;
   letter-spacing: -0.02em;
 }
+
 .button.is-testimonials {
-  color: #111;
+  color: #111111;
   border: 1px solid #fd9222;
   margin: 0 auto;
+}
+
+/*** Footer ***/
+
+.footer {
+  padding: 50px 0;
+  background-color: #1e1823;
+  color: #fff;
+}
+
+.footer__top {
+  display: flex;
+  gap: 50px;
+}
+
+.footer__slogan {
+  font-size: 28px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: -0.02em;
+  max-width: 300px;
+  margin-right: auto;
+}
+
+.footer__slogan span {
+  color: #fd9222;
+  font-weight: 500;
+}
+
+.footer__col {
+}
+
+.footer__list-heading {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.3;
+  margin-bottom: 14px;
+}
+
+.footer__social-list {
+  display: flex;
+  gap: 14px;
+}
+
+.social-menu__icon.is-footer {
+  stroke: #fff;
+}
+.footer__address-list-item:not(:last-child) {
+  margin-bottom: 4px;
+}
+.footer__address-link {
+  display: block;
+  font-size: 14px;
+  line-height: 1.3;
+  letter-spacing: -0.02em;
+  transition: color 150ms ease-in-out;
+}
+.footer__address-link:hover,
+.footer__address-link:focus {
+  color: #fd9222;
+}
+
+.footer__line {
+  background-color: rgba(255, 255, 255, 0.1);
+  height: 1px;
+  margin-top: 50px;
+  margin-bottom: 24px;
+}
+
+.footer__bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer__nav {
+}
+
+.footer__nav-list {
+  display: flex;
+  gap: 24px;
+}
+
+.footer__nav-list-item {
+}
+
+.footer__nav-link {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: -0.02em;
+  transition: color 150ms ease-in-out;
+}
+.footer__nav-link:hover,
+.footer__nav-link:focus {
+  color: #fd9222;
+}
+
+.footer__form {
+  display: flex;
+  gap: 8px;
+}
+.footer__input {
+  padding: 14px 24px;
+  font-size: 18px;
+  color: #ffffff;
+  letter-spacing: -0.02em;
+  background-color: transparent;
+  border-radius: 30px;
+  border: 1.5px solid rgba(255, 255, 255, 0.15);
+}
+.footer__input::placeholder {
+  color: rgba(255, 255, 255, 0.3);
 }
