--- a/css/styles.css
+++ b/css/styles.css
@@ -660,3 +660,109 @@ address {
 .footer__input::placeholder {
   color: rgba(255, 255, 255, 0.3);
 }
+
+/*** Modal ***/
+.backdrop-overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(8px);
+  overflow-y: auto;
+  padding: 100px 15px;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.backdrop-overlay.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
+}
+.modal {
+  width: 517px;
+  height: auto;
+  background-color: #fafafa;
+  padding: 40px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 15px;
+}
+.modal__close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  fill: none;
+  stroke: #111;
+  cursor: pointer;
+  transition: stroke 150ms ease-in-out;
+}
+.modal__close-btn:hover,
+.modal__close-btn:focus {
+  stroke: #fd9222;
+}
+.modal__title {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.16;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+  margin-bottom: 42px;
+}
+.modal__title span {
+  display: block;
+  color: #fd9222;
+}
+.modal__form {
+}
+.modal__input-wrap {
+  position: relative;
+}
+.modal__form-field {
+  margin-bottom: 18px;
+}
+.modal__label {
+  display: block;
+  color: rgba(64, 64, 64, 0.3);
+  font-size: 14px;
+  letter-spacing: -0.01em;
+  margin-bottom: 8px;
+}
+.modal__input,
+.modal__textarea {
+  color: inherit;
+  width: 100%;
+  min-height: 68px;
+  padding: 22px 24px 22px 64px;
+  outline: transparent;
+  background-color: transparent;
+  border-radius: 13px;
+  border: 1.5px solid rgba(17, 17, 17, 0.05);
+  box-shadow: 0px 5.445px 5.445px 0px rgba(0, 0, 0, 0.03);
+  transition: border 150ms ease-in-out;
+}
+.modal__textarea {
+  min-height: 137px;
+  padding-left: 24px;
+  transition: border 150ms ease-in-out;
+}
+.modal__input-icon {
+  fill: none;
+  stroke: #404040;
+  position: absolute;
+  top: 50%;
+  left: 24px;
+  transform: translateY(-50%);
+  transition: stroke 150ms ease-in-out;
+}
+.modal__input:focus,
+.modal__textarea:focus {
+  border-color: #fd9222;
+}
+.modal__input:focus + .modal__input-icon {
+  stroke: #fd9222;
+}
